add client gradle dist + gradle workflow